refactor survey domain model